# sqlmodel-fastapi

./: database.db  pyproject.toml  testing.db
app/: database.py  main.py  models.py
app/routers/: heroes.py  teams.py
app/utils/: hashing.py
tests/: .gitignore  conftest.py  test_hero.py
