[tool.poetry]
name = "sqlmodel-fastapi"
version = "0.1.0"
description = ""
authors = ["chineduCoded <chinedujohn17@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
